# src/routes/login.js
@@ -1,32 +1,25 @@
-const loginController = require('../controllers/login');
-
 module.exports = (app) => {
-
-    app.post('/login', loginController.login
+    app.post('/login', loginController.login);
     /*
-        #swagger.tags = ["Login"]
-        
-        #swagger.summary = "Login de usuário"
-        
-        #swagger.description = 'Realiza o login de um usuário no sistema'
-        
-        #swagger.parameters['credentials'] = {
-            in: 'body',
-            description: 'Credenciais de login',
-            required: true,
-            schema: {
-                username: "nome_de_usuario",
-                password: "senha_do_usuario"
-            }
-        }
-
+        #swagger.tags = ['Login']
+        #swagger.summary = 'Login de usuário'
+        #swagger.description = 'Realiza o login de um usuário no sistema usando Basic Auth'
+        #swagger.security = [{
+            BasicAuth: []
+        }]
         #swagger.responses[200] = {
             description: 'Login bem-sucedido',
             schema: {
                 mensagem: 'Login bem-sucedido!',
                 token: 'token_gerado'
             }
-        }  
+        }
+        #swagger.responses[400] = {
+            description: 'Credenciais não fornecidas',
+            schema: {
+                mensagem: 'Login com Basic Auth necessário!'
+            }
+        }
         #swagger.responses[401] = {
             description: 'Credenciais inválidas',
             schema: {
@@ -38,27 +31,6 @@ module.exports = (app) => {
             schema: {
                 mensagem: 'Erro no servidor!'
             }
-        }    
-    */
-    );
-    //app.post('/login/post', loginController.newUser
-
-    /*
-        #swagger.tags = ["Login"]
-        
-        #swagger.summary = "Criação do usuário"
-
-        #swagger.description = 'Realiza o cadastro de um usuário no sistema'
-
-        #swagger.parameters['login/post'] = {
-            in: 'body',
-            description: 'Dados para criar um novo usuário',
-            required: true,
-            schema: {
-                "user": "Renan",
-                "pass": "1525"
-            }
         }
     */
-    //);
-};
+}
